CI_FILES/svc.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: frontend
  name: frontend
  namespace: $NAMESPACE
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  loadBalancerIP: $LOADBALANCER_IP
  ports:
  - name: frontend
    port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: frontend
  sessionAffinity: None
  type: LoadBalancer
