CI_FILES/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    external-dns.alpha.kubernetes.io/hostname: ${DNS}
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 15000m
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 0m
    nginx.ingress/client-max-body-size: 15000m
  generation: 1
  labels:
    app: frontend
  name: frontend
  namespace: ${NAMESPACE}
spec:
  rules:
  - host: ${DNS}
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /
        pathType: Prefix

  tls:
  - hosts:
    - ${DNS}
    secretName: willow-tls
